remove all maven dependencies